--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html class="no-js">
 
 <head>
     <meta charset="UTF-8">
@@ -11,6 +12,11 @@
     <link href="/CECePortal/assets/styles/centre-enroll.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/CECePortal/assets/styles/glob.min.css">
+    <noscript>
+        <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
+    </noscript>
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
 
 <body>
     <div class="login-container unselectable">
@@ -108,5 +114,3 @@
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/centre_enroll.js"></script>
 </body>
-
-</html>
