--- a/CECePortal/error-page.html
+++ b/CECePortal/error-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html class="no-js">
 
 <head>
     <meta charset="UTF-8">
@@ -23,5 +24,3 @@
     </div>
     <div id="notification" class="notification unselectable"></div>
 </body>
-
-</html>
