--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html class="no-js">
 
 <head>
     <meta charset="UTF-8">
@@ -17,6 +16,7 @@
     </noscript>
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
+</head>
 
 <body>
     <div class="login-container unselectable">
@@ -58,15 +58,17 @@
                         <label for="schoolNumber">School Number</label>
                         <input type="text" id="schoolNumber" name="schoolNumber" readonly>
                     </div>
-                    <div class="form-group"><label for="state">State:</label>
-                        <select id="state">
+                    <div class="form-group">
+                        <label for="state">State</label>
+                        <select id="state" name="state">
                             <option value="">Select State</option>
                         </select>
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group"><label for="lga">Local Government Area:</label>
-                        <select id="lga">
+                    <div class="form-group">
+                        <label for="lga">Local Government Area</label>
+                        <select id="lga" name="lga">
                             <option value="">Select an LGA</option>
                         </select>
                     </div>
@@ -112,7 +114,10 @@
                 </div>
             </form>
         </div>
+        <div id="notification" class="notification unselectable"></div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/centre_enroll.js"></script>
 </body>
+
+</html>
