--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -57,9 +57,7 @@
             </div>
             <div>
                 <span class="login text-sm unselectable" id="btnLogin">School Login</span>
-                <button class="custom-btn signup text-sm unselectable" id="btnReg1">Start Registration
-
-                </button>
+                <button class="custom-btn signup text-sm unselectable" id="btnReg1">Start Registration </button>
             </div>
         </nav>
         <div class="curved-rectangle-1 unselectable"></div>
