--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -14,9 +14,9 @@
     <noscript>
         <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
     </noscript>
-    <meta http-equiv="Content-Security-Policy"
+    <!-- <meta http-equiv="Content-Security-Policy"
         content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
-</head>
+</head> -->
 
 <body>
     <div class="login-container unselectable">
