--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -26,6 +26,8 @@
     <meta name="twitter:site" content="@YourTwitterHandle">
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Catholic Education Board">
+
+
     <title>Catholic Education Board - ePortal</title>
     <link rel="icon" href="/CECePortal/assets/icons/favicon.svg" type="image/png">
     <link rel="icon" href="/CECePortal/assets/icons/favicon.png" type="image/png">
@@ -36,8 +38,8 @@
     <noscript>
         <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
     </noscript>
-    <!-- <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';"> -->
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
 </head>
 
 
@@ -101,10 +103,11 @@
     <footer>
         <div class="footer-content unselectable">
             <div class="footer-links unselectable"><a href="/CECePortal/index.html">Home</a><a
-                    href="/CECePortal/verify-centre.html">Registration</a><a href="/CECePortal/contact.html">Contact</a>
+                    href="/CECePortal/students_enroll.html">Registration</a><a
+                    href="/CECePortal/contact.html">Contact</a>
             </div>
             <div class="footer-info unselectable">
-                <p>&copy; 2024 Catholic Education Board. All rights reserved.</p>
+                <p>&copy; 2024 Catholic Education Comission (CEC). All rights reserved.</p>
                 <p>Catholic Education Comission, Nigeria</p>
             </div>
         </div>
@@ -113,7 +116,8 @@
     <div id="notification-bar" class="notification-bar">
         <span id="notification-message" class="notification-message">You are offline. Please check your internet
             connection.</span>
-        <button id="close-notification" onclick="hideNotification()">×</button>
+        <!-- <button id="close-notification" onclick="hideNotification()">×</button> -->
+        <div id="notification" class="notification unselectable"></div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/main.js"></script>
