--- a/CECePortal/error-page.html
+++ b/CECePortal/error-page.html
@@ -22,5 +22,8 @@
             <a href="index.html" class="error-home-link">Return to Home</a>
         </div>
     </div>
+    <div id="notification-bar" class="notification-bar">
+        <span id="notification-message" class="notification-message"></span>
+           </div>
     <div id="notification" class="notification unselectable"></div>
 </body>
