--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -114,11 +114,9 @@
     </footer>
     <!-- Notification Bar -->
     <div id="notification-bar" class="notification-bar">
-        <span id="notification-message" class="notification-message">You are offline. Please check your internet
-            connection.</span>
-        <!-- <button id="close-notification" onclick="hideNotification()">×</button> -->
-        <div id="notification" class="notification unselectable"></div>
-    </div>
+        <span id="notification-message" class="notification-message"></span>
+           </div>
+    <div id="notification" class="notification unselectable"></div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/main.js"></script>
 </body>
