--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -57,6 +57,9 @@
                         href="password-reset.html">Reset Password</a></div>
             </form>
         </div>
+        <div id="notification-bar" class="notification-bar">
+            <span id="notification-message" class="notification-message"></span>
+        </div>
         <div id="notification" class="notification unselectable"></div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js">;</script>
