--- a/CECePortal/results-check.html
+++ b/CECePortal/results-check.html
@@ -61,6 +61,9 @@
                     <button type="submit" id="submit" class="btn">Check Results</button>
                 </div>
             </form>
+            <div id="notification-bar" class="notification-bar">
+                <span id="notification-message" class="notification-message"></span>
+                   </div>
             <div id="notification" class="notification unselectable"></div>
         </div>
     </div>
