--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -116,6 +116,9 @@
                 </div>
             </form>
         </div>
+        <div id="notification-bar" class="notification-bar">
+            <span id="notification-message" class="notification-message"></span>
+               </div>
         <div id="notification" class="notification unselectable"></div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
