--- a/CECePortal/students_enroll.html
+++ b/CECePortal/students_enroll.html
@@ -96,8 +96,10 @@
                 </div>
                 <div class="form-actions"><button type="submit" id="submit">Submit</button></div>
             </form>
+            <div id="notification-bar" class="notification-bar">
+                <span id="notification-message" class="notification-message"></span>
+                   </div>
             <div id="notification" class="notification unselectable"></div>
-
         </div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
