--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -49,6 +49,9 @@
                     <div class="form-links unselectable"> <a href="login.html">Back to Login</a> </div>
             </form>
         </div>
+        <div id="notification-bar" class="notification-bar">
+            <span id="notification-message" class="notification-message"></span>
+        </div>
         <div id="notification" class="notification unselectable"></div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js">;</script>
