--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -123,6 +123,7 @@
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/centre_enroll.js"></script>
+    <script src="/CECePortal/assets/scripts/glob.js">;</script>
 </body>
 
 </html>
