--- a/CECePortal/error-page.html
+++ b/CECePortal/error-page.html
@@ -24,6 +24,7 @@
     </div>
     <div id="notification-bar" class="notification-bar">
         <span id="notification-message" class="notification-message"></span>
-           </div>
+    </div>
     <div id="notification" class="notification unselectable"></div>
+    <script src="/CECePortal/assets/scripts/glob.js"></script>
 </body>
