--- a/CECePortal/results-check.html
+++ b/CECePortal/results-check.html
@@ -70,6 +70,7 @@
 
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/results-check.js"></script>
+    <script src="/CECePortal/assets/scripts/glob.js">;</script>
 </body>
 
 </html>
