--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -56,3 +56,5 @@
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js">;</script>
     <script src="/CECePortal/assets/scripts/verifycentre.js">;</script>
+    <script src="/CECePortal/assets/scripts/glob.js">;</script>
+</body>
