--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -115,8 +115,9 @@
     <!-- Notification Bar -->
     <div id="notification-bar" class="notification-bar">
         <span id="notification-message" class="notification-message"></span>
-           </div>
+    </div>
     <div id="notification" class="notification unselectable"></div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/main.js"></script>
+    <script src="/CECePortal/assets/scripts/glob.js">;</script>
 </body>
