--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -64,3 +64,5 @@
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js">;</script>
     <script src="/CECePortal/assets/scripts/login.js">;</script>
+    <script src="/CECePortal/assets/scripts/glob.js">;</script>
+</body>
