--- a/CECePortal/students_enroll.html
+++ b/CECePortal/students_enroll.html
@@ -98,12 +98,11 @@
             </form>
             <div id="notification-bar" class="notification-bar">
                 <span id="notification-message" class="notification-message"></span>
-                   </div>
+            </div>
             <div id="notification" class="notification unselectable"></div>
         </div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/students_enroll.js"></script>
+    <script src="/CECePortal/assets/scripts/glob.js">;</script>
 </body>
-
-</html>
