--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -54,7 +54,7 @@
                 <ul>
                     <li><a href="index.html" class="text-sm unselectable">Home</a></li>
                     <li><a href="#examination" class="text-sm unselectable">Examination</a></li>
-                    <li><a href="#contact" class="text-sm unselectable">Contact</a></li>
+                    <li><a href="contact-us.html" class="text-sm unselectable">Contact</a></li>
                 </ul>
             </div>
             <div>
@@ -102,9 +102,9 @@
     </main>
     <footer>
         <div class="footer-content unselectable">
-            <div class="footer-links unselectable"><a href="/CECePortal/index.html">Home</a><a
-                    href="/CECePortal/students_enroll.html">Registration</a><a
-                    href="/CECePortal/contact.html">Contact</a>
+            <div class="footer-links unselectable"><a href="index.html">Home</a><a
+                    href="students_enroll.html">Registration</a><a
+                    href="contact-us.html">Contact</a>
             </div>
             <div class="footer-info unselectable">
                 <p>&copy; 2024 Catholic Education Comission (CEC). All rights reserved.</p>
