--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -53,7 +53,7 @@
                 <div class="hamburger unselectable" aria-label="Menu toggle"></div>
                 <ul>
                     <li><a href="index.html" class="text-sm unselectable">Home</a></li>
-                    <li><a href="#examination" class="text-sm unselectable">Examination</a></li>
+                    <li><a href="enrol_students.html" class="text-sm unselectable">Examination</a></li>
                     <li><a href="contact-us.html" class="text-sm unselectable">Contact</a></li>
                 </ul>
             </div>
@@ -103,8 +103,7 @@
     <footer>
         <div class="footer-content unselectable">
             <div class="footer-links unselectable"><a href="index.html">Home</a><a
-                    href="students_enroll.html">Registration</a><a
-                    href="contact-us.html">Contact</a>
+                    href="students_enroll.html">Registration</a><a href="contact-us.html">Contact</a>
             </div>
             <div class="footer-info unselectable">
                 <p>&copy; 2024 Catholic Education Comission (CEC). All rights reserved.</p>
