--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -53,7 +53,7 @@
                 <div class="hamburger unselectable" aria-label="Menu toggle"></div>
                 <ul>
                     <li><a href="index.html" class="text-sm unselectable">Home</a></li>
-                    <li><a href="enrol_students.html" class="text-sm unselectable">Examination</a></li>
+                    <li><a href="#Examination" class="text-sm unselectable">Examination</a></li>
                     <li><a href="contact-us.html" class="text-sm unselectable">Contact</a></li>
                 </ul>
             </div>
