--- a/CECePortal/enrol_students.html
+++ b/CECePortal/enrol_students.html
@@ -116,9 +116,9 @@
                     <button type="button" class="submit" id="submitBtn" disabled>Submit</button>
                 </div>
             </form>
-            <div id="notification-bar" class="notification-bar">
+            <!-- <div id="notification-bar" class="notification-bar">
                 <span id="notification-message" class="notification-message"></span>
-            </div>
+            </div> -->
             <div id="notification" class="notification unselectable"></div>
         </div>
     </div>
