--- a/CECePortal/enrol_students.html
+++ b/CECePortal/enrol_students.html
@@ -110,15 +110,15 @@
                     <h3>Step 4: Upload Passport Photo</h3>
                     <div class="form-group"><label for="passport">Passport Photo (Max 15kb)</label><input type="file"
                             id="passport" name="passport" accept="image/jpeg, image/jpg"></div>
-                    <div class="passport-preview-container"><img id="passportPreview" alt="Passport Preview"
+                    <div class="passport-preview-container"><img id="passportPreview" src="#" alt="Passport Preview"
                             style="display:none; width: 100px; height: 100px; margin-top: 10px;"></div>
                     <button type="button" class="btn-prev">Previous</button>
                     <button type="button" class="submit" id="submitBtn" disabled>Submit</button>
                 </div>
             </form>
-            <!-- <div id="notification-bar" class="notification-bar">
+            <div id="notification-bar" class="notification-bar">
                 <span id="notification-message" class="notification-message"></span>
-            </div> -->
+            </div>
             <div id="notification" class="notification unselectable"></div>
         </div>
     </div>
