--- a/CECePortal/enrol_students.html
+++ b/CECePortal/enrol_students.html
@@ -66,8 +66,8 @@
                     <div class="form-row">
                         <div class="form-group"><label for="phone">Phone Number</label><input type="tel" id="phone"
                                 name="phone" required></div>
-                        <div class="form-group"><label for="email">Email (Optional)</label><input type="email"
-                                id="email" name="email"></div>
+                        <div class="form-group"><label for="email">Email</label><input type="email" id="email"
+                                name="email" required></div>
                     </div>
                     <div class="form-row">
                         <div class="form-group"><label for="state">State of Origin:</label><select id="state" required>
@@ -112,8 +112,9 @@
                             id="passport" name="passport" accept="image/jpeg, image/jpg"></div>
                     <div class="passport-preview-container"><img id="passportPreview" src="#" alt="Passport Preview"
                             style="display:none; width: 100px; height: 100px; margin-top: 10px;"></div>
-                    <button type="button" class="btn-prev">Previous</button>
-                    <button type="button" class="submit" id="submitBtn" disabled>Submit</button>
+                    <button type="button" class="btn-prev">Previous</button><button type="button" class="submit"
+                        id="submitBtn" disabled>Submit</button>
+
                 </div>
             </form>
             <div id="notification-bar" class="notification-bar">
