--- a/CECePortal/enrol_students.html
+++ b/CECePortal/enrol_students.html
@@ -112,7 +112,8 @@
                             id="passport" name="passport" accept="image/jpeg, image/jpg"></div>
                     <div class="passport-preview-container"><img id="passportPreview" src="#" alt="Passport Preview"
                             style="display:none; width: 100px; height: 100px; margin-top: 10px;"></div>
-                    <button type="button" class="btn-prev">Previous</button><button type="button" class="submit"
+                    <button type="button" class="btn-prev">Previous</button>
+                    <button type="button" class="submit"
                         id="submitBtn" disabled>Submit</button>
 
                 </div>
