--- a/CECePortal/enrol_students.html
+++ b/CECePortal/enrol_students.html
@@ -113,8 +113,7 @@
                     <div class="passport-preview-container"><img id="passportPreview" src="#" alt="Passport Preview"
                             style="display:none; width: 100px; height: 100px; margin-top: 10px;"></div>
                     <button type="button" class="btn-prev">Previous</button>
-                    <button type="button" class="submit"
-                        id="submitBtn" disabled>Submit</button>
+                    <button type="button" class="submit" id="submit" disabled>Submit</button>
 
                 </div>
             </form>
