--- a/CECePortal/enrol_students.html
+++ b/CECePortal/enrol_students.html
@@ -126,7 +126,7 @@
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/enrol_students.js"></script>
     <script src="/CECePortal/assets/scripts/glob.js"></script>
-    <script src="/CECePortal/assets/scripts/progress-bar.js"></script> <!-- Add this line -->
+    <script src="/CECePortal/assets/scripts/progress-bar.js"></script>
 </body>
 
 </html>
