--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -103,7 +103,7 @@
     <footer>
         <div class="footer-content unselectable">
             <div class="footer-links unselectable"><a href="index.html">Home</a><a
-                    href="students_enroll.html">Registration</a><a href="contact-us.html">Contact</a>
+                    href="enrol_students.html">Registration</a><a href="contact-us.html">Contact</a>
             </div>
             <div class="footer-info unselectable">
                 <p>&copy; 2024 Catholic Education Comission (CEC). All rights reserved.</p>
