--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html class="no-js">
 
 <head>
     <meta charset="UTF-8" />
@@ -120,3 +119,5 @@
     <script src="/CECePortal/assets/scripts/main.js"></script>
     <script src="/CECePortal/assets/scripts/glob.js">;</script>
 </body>
+
+</html>
