--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="form-group">
                         <label for="schoolNumber">School Number</label>
-                        <input type="text" id="schoolNumber" name="schoolNumber" value="0010291">
+                        <input type="text" id="schoolNumber" name="schoolNumber" value="101007">
                     </div>
                 </div>
                 <div class="form-row">
@@ -78,24 +78,24 @@
                 <div class="form-row">
                     <div class="form-group">
                         <label for="registratorName">Full Name of Registrator</label>
-                        <input type="text" id="registratorName" name="registratorName" value="Ogwo Godspower Chinaza">
+                        <input type="text" id="registratorName" name="registratorName">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group">
                         <label for="schoolEmail">School Email</label>
-                        <input type="email" id="schoolEmail" name="schoolEmail" value="ogwogp@gmail.com">
+                        <input type="email" id="schoolEmail" name="schoolEmail">
                     </div>
                     <div class="form-group">
                         <label for="registratorPhone">Registrator's Phone</label>
-                        <input type="tel" id="registratorPhone" name="registratorPhone" value="08136048834">
+                        <input type="tel" id="registratorPhone" name="registratorPhone">
                     </div>
 
                 </div>
                 <div class="form-row">
                     <div class="form-group">
                         <label for="principalPhone">Principal's Phone Number</label>
-                        <input type="tel" id="principalPhone" name="principalPhone" value="07026421903">
+                        <input type="tel" id="principalPhone" name="principalPhone">
                     </div>
                     <div class="form-group">
                         <label for="schoolType">School Type</label>
