--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html class="no-js">
 
 <head>
     <meta charset="UTF-8">
@@ -47,6 +46,7 @@
                         placeholder="Enter Centre/School Number"> </div>
                 <div class="form-actions"> <button type="submit" id="submit" class="btn">Continue</button>
                     <div class="form-links unselectable"> <a href="login.html">Back to Login</a> </div>
+                </div>
             </form>
         </div>
         <div id="notification-bar" class="notification-bar">
@@ -58,3 +58,5 @@
     <script src="/CECePortal/assets/scripts/verifycentre.js">;</script>
     <script src="/CECePortal/assets/scripts/glob.js">;</script>
 </body>
+
+</html>
