--- a/CECePortal/error-page.html
+++ b/CECePortal/error-page.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<html class="no-js">
+<html lang="en" class="no-js">
 
 <head>
     <meta charset="UTF-8">
@@ -28,3 +27,5 @@
     <div id="notification" class="notification unselectable"></div>
     <script src="/CECePortal/assets/scripts/glob.js"></script>
 </body>
+
+</html>
