--- a/CECePortal/students_enroll.html
+++ b/CECePortal/students_enroll.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<html class="no-js">
+<html lang="en" class="no-js">
 
 <head>
     <meta charset="UTF-8">
@@ -106,3 +105,5 @@
     <script src="/CECePortal/assets/scripts/students_enroll.js"></script>
     <script src="/CECePortal/assets/scripts/glob.js">;</script>
 </body>
+
+</html>
