--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 
 <head>
     <meta charset="UTF-8" />
@@ -38,7 +38,7 @@
         <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
     </noscript>
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
+        content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
 </head>
 
 
@@ -115,9 +115,9 @@
         <span id="notification-message" class="notification-message"></span>
     </div>
     <div id="notification" class="notification unselectable"></div>
-    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
-    <script src="/CECePortal/assets/scripts/main.js"></script>
-    <script src="/CECePortal/assets/scripts/glob.js">;</script>
+    <script type="text/javascript" src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="/CECePortal/assets/scripts/main.js"></script>
+    <script type="text/javascript" src="/CECePortal/assets/scripts/glob.js"></script>
 </body>
 
 </html>
