--- a/CECePortal/results-check.html
+++ b/CECePortal/results-check.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<html class="no-js">
+<html lang="en" class="no-js">
 
 <head>
     <meta charset="UTF-8">
@@ -16,12 +15,10 @@
         <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
     </noscript>
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
+        content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
 </head>
 
 <body>
-    <div id="notification" class="notification"></div>
-
     <div class="results-container unselectable">
         <div class="results-left unselectable">
             <a href="/CECePortal/index.html" class="logo-link">
