--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -41,8 +41,8 @@
             <h2>School Update</h2>
             <p>Hi, to update your school information, enter the school centre number.</p>
             <form id="verify-centre-form">
-                <div class="form-group unselectable"> <label for="centreNumber">Centre/School Number</label> <input
-                        type="number" id="centreNumber" name="centreNumber" class="form-control"
+                <div class="form-group unselectable"> <label for="schoolNumber">Centre/School Number</label> <input
+                        type="number" id="schoolNumber" name="schoolNumber" class="form-control"
                         placeholder="Enter Centre/School Number"> </div>
                 <div class="form-actions"> <button type="submit" id="submit" class="btn">Continue</button>
                     <div class="form-links unselectable"> <a href="login.html">Back to Login</a> </div>
