--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -50,15 +50,14 @@
                     </div>
                     <div class="form-group">
                         <label for="schoolNumber">School Number</label>
-                        <input type="text" id="schoolNumber" name="schoolNumber" value="101007">
+                        <input type="text" id="schoolNumber" name="schoolNumber">
                     </div>
                 </div>
                 <div class="form-row">
 
                     <div class="form-group">
                         <label for="schoolName">School Name</label>
-                        <input type="text" id="schoolName" name="schoolName" value="FATIMA SECONDARY TECHNICAL SCHOOL"
-                            readonly>
+                        <input type="text" id="schoolName" name="schoolName" readonly>
                     </div>
                 </div>
                 <div class="form-row">
