--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -14,15 +14,15 @@
     <meta property="og:title" content="Catholic Education Board - Examination Registration Portal">
     <meta property="og:description"
         content="Effortlessly register for exams and manage student data through our secure online portal. Access comprehensive exam information and streamline school management.">
-    <meta property="og:image" content="https://www.yourwebsite.com/path-to-your-image.jpg">
-    <meta property="og:url" content="https://www.yourwebsite.com/registration">
+    <meta property="og:image" content="https://gpsmartapps.github.io/CECePortal/assets/logo/logo2.png">
+    <meta property="og:url" content="https://gpsmartapps.github.io/CECePortal">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Catholic Education Board - Examination Registration Portal">
     <meta name="twitter:description"
         content="Effortlessly register for exams and manage student data through our secure online portal. Access comprehensive exam information and streamline school management.">
-    <meta name="twitter:image" content="https://www.yourwebsite.com/path-to-your-image.jpg">
-    <meta name="twitter:site" content="@YourTwitterHandle">
+    <meta name="twitter:image" content="https://gpsmartapps.github.io/CECePortal/assets/logo/logo2.png">
+    <meta name="twitter:site" content="@CECePortal">
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Catholic Education Board">
 
