--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -8,26 +8,26 @@
     <meta name="description"
         content="Effortlessly register for exams and manage student data through the Catholic Education Board's secure online portal. Access comprehensive exam information and streamline school management.">
     <meta name="keywords"
-        content="examination, registration, Catholic Education Board, student data, school management, online portal, secure registration, exam information">
-    <meta name="author" content="Catholic Education Board">
+        content="examination, registration, Catholic Education Commission, student data, school management, online portal, secure registration, exam information">
+    <meta name="author" content="Catholic Education Commission">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Catholic Education Board - Examination Registration Portal">
+    <meta property="og:title" content="Catholic Education Commission - Examination Registration Portal">
     <meta property="og:description"
         content="Effortlessly register for exams and manage student data through our secure online portal. Access comprehensive exam information and streamline school management.">
     <meta property="og:image" content="https://gpsmartapps.github.io/CECePortal/assets/logo/logo2.png">
     <meta property="og:url" content="https://gpsmartapps.github.io/CECePortal">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Catholic Education Board - Examination Registration Portal">
+    <meta name="twitter:title" content="Catholic Education Commission - Examination Registration Portal">
     <meta name="twitter:description"
         content="Effortlessly register for exams and manage student data through our secure online portal. Access comprehensive exam information and streamline school management.">
     <meta name="twitter:image" content="https://gpsmartapps.github.io/CECePortal/assets/logo/logo2.png">
     <meta name="twitter:site" content="@CECePortal">
     <meta property="og:locale" content="en_US">
-    <meta property="og:site_name" content="Catholic Education Board">
+    <meta property="og:site_name" content="Catholic Education Commission">
 
 
-    <title>Catholic Education Board - ePortal</title>
+    <title>Catholic Education Commission - ePortal</title>
     <link rel="icon" href="/CECePortal/assets/icons/favicon.svg" type="image/png">
     <link rel="icon" href="/CECePortal/assets/icons/favicon.png" type="image/png">
     <link rel="stylesheet" href="/CECePortal/assets/styles/index.min.css">
