--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -37,8 +37,14 @@
     <noscript>
         <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
     </noscript>
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+    <!-- Content Security Policy Meta Tag -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
+                   script-src 'self'; 
+                   style-src 'self' 'unsafe-inline'; 
+                   style-src-elem 'self' https://fonts.googleapis.com; 
+                   font-src 'self' https://fonts.gstatic.com; 
+                   img-src 'self'; 
+                   frame-src 'self';">
 </head>
 
 
