--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -14,7 +14,7 @@
     <noscript>
         <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
     </noscript>
-  </head>
+</head>
 
 <body>
     <div class="login-container unselectable">
@@ -38,19 +38,24 @@
                     </svg></a></div>
             <h2>Login</h2>
             <form id="loginForm" method="POST" action="/CECePortal/centre-enroll.html">
-                <div class="form-group unselectable"><label for="centreNumber">Centre Number</label><input type="number"
-                        class="form-control" id="centreNumber" name="centreNumber" placeholder="Enter Centre Number"
-                        required></div>
-                <div class="form-group unselectable"><label for="emailAddress">Email Address</label><input type="email"
-                        class="form-control" id="emailAddress" name="emailAddress" placeholder="Enter Email Address"
-                        required></div>
-                <div class="form-group password-group unselectable"><label for="password">Password</label><input
-                        type="password" class="form-control" id="passwd" name="password" placeholder="Enter Password"
-                        required></div>
-                <div class="form-actions unselectable"><button type="submit" id="submit" class="btn">Login</button>
+                <div class="form-group unselectable">
+                    <label for="centreNumber">Centre Number</label>
+                    <input type="number" class="form-control" id="centreNumber" name="centreNumber" placeholder="Enter Centre Number" required>
                 </div>
-                <div class="form-links unselectable"><a href="verify-centre.html">Register School</a><span>|</span><a
-                        href="password-reset.html">Reset Password</a></div>
+                <div class="form-group unselectable">
+                    <label for="emailAddress">Email Address</label>
+                    <input type="email" class="form-control" id="emailAddress" name="emailAddress" placeholder="Enter Email Address" required>
+                </div>
+                <div class="form-group password-group unselectable">
+                    <label for="passwd">Password</label>
+                    <input type="password" class="form-control" id="passwd" name="password" placeholder="Enter Password" required>
+                </div>
+                <div class="form-actions unselectable">
+                    <button type="submit" id="submit" class="btn">Login</button>
+                </div>
+                <div class="form-links unselectable">
+                    <a href="verify-centre.html">Register School</a><span>|</span><a href="password-reset.html">Reset Password</a>
+                </div>
             </form>
         </div>
         <div id="notification-bar" class="notification-bar">
@@ -58,9 +63,9 @@
         </div>
         <div id="notification" class="notification unselectable"></div>
     </div>
-    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js">;</script>
-    <script src="/CECePortal/assets/scripts/login.js">;</script>
-    <script src="/CECePortal/assets/scripts/glob.js">;</script>
+    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
+    <script src="/CECePortal/assets/scripts/login.js"></script>
+    <script src="/CECePortal/assets/scripts/glob.js"></script>
 </body>
 
 </html>
