--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -122,7 +122,8 @@
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/centre_enroll.js"></script>
-    <script src="/CECePortal/assets/scripts/glob.js">;</script>
+    <script src="/CECePortal/assets/scripts/glob.js"></script>
+    <script src="/CECePortal/assets/scripts/loadStatesLga.js"></script>
 </body>
 
 </html>
