--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -79,7 +79,12 @@
             </div>
             <div class="form-group">
               <label for="schoolNumber">School Number</label>
-              <input type="text" id="schoolNumber" name="schoolNumber" />
+              <input
+                type="text"
+                id="schoolNumber"
+                name="schoolNumber"
+                readonly
+              />
             </div>
           </div>
           <div class="form-row">
