--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -30,6 +30,13 @@
   </head>
 
   <body>
+    <div id="loading" style="display:none;">
+      <div class="loader"></div>
+      <p>Loading...</p>
+  </div>
+  
+
+    
     <div class="login-container unselectable">
       <div class="login-left unselectable">
         <a href="/CECePortal/index.html"
