--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -151,7 +151,7 @@
             ></textarea>
           </div>
           <div class="form-actions">
-            <button type="submit" id="update">Update</button>
+            <button type="submit" id="update">Update School Record</button>
             <a href="/CECePortal/index.html" class="button-back"
               >Back to Login</a
             >
