--- a/CECePortal/server-error.html
+++ b/CECePortal/server-error.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Server Unreachable</title>
-  <link href="/CECePortal/assets/styles/server-error.min.css" rel="stylesheet">
-</head>
-<body>
-  <h1>Service Unavailable</h1>
-  <p>We're sorry, but our service is currently unavailable. Please try again later.</p>
-  <button class="retry" onclick="location.reload();">Retry</button>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Service Unavailable</title>
+    <link
+      href="/CECePortal/assets/styles/server-error.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <h1>Service Unavailable</h1>
+    <p>
+      We're sorry, but our service is currently unavailable. Please try again
+      later.
+    </p>
+    <button class="retry" id="retry">Back to Home</button>
+
+    <script src="/CECePortal/assets/scripts/server-error.js"></script>
+  </body>
 </html>
