Added_Folder_Grouping

--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -14,29 +14,22 @@
       href="/CECePortal/assets/icons/favicon.png"
       type="image/png"
     />
-    <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet" />
     <link
-      href="/CECePortal/assets/styles/centre-enroll.min.css"
+      href="/CECePortal/public/Centres/centre-enroll.min.css"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="/CECePortal/assets/styles/bootstrap-icons.min.css"
-    />
-    <link rel="stylesheet" href="/CECePortal/assets/styles/glob.min.css" />
+        <link rel="stylesheet" href="/CECePortal/public/Global/glob.min.css" />
     <noscript>
-      <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html" />
+      <meta http-equiv="refresh" content="0;url=/CECePortal/public/Global/error-page.html" />
     </noscript>
   </head>
 
   <body>
-    <div id="loading" style="display:none;">
+    <div id="loading" style="display: none">
       <div class="loader"></div>
-      <p>Loading...</p>
-  </div>
-  
+      <p>Loading... Please wait.</p>
+    </div>
 
-    
     <div class="login-container unselectable">
       <div class="login-left unselectable">
         <a href="/CECePortal/index.html"
@@ -163,8 +156,7 @@
       </div>
       <div id="notification" class="notification unselectable"></div>
     </div>
-    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
-    <script src="/CECePortal/assets/scripts/centre_enrollment.js"></script>
-    <script src="/CECePortal/assets/scripts/glob.js"></script>
+    <script src="/CECePortal/public/Centres/centre_enrollment.js"></script>
+    <script src="/CECePortal/public/Global/glob.js"></script>
   </body>
 </html>
