--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -30,10 +30,9 @@
     <title>Catholic Education Commission - ePortal</title>
     <link rel="icon" href="/CECePortal/assets/icons/favicon.svg" type="image/png">
     <link rel="icon" href="/CECePortal/assets/icons/favicon.png" type="image/png">
-    <link rel="stylesheet" href="/CECePortal/assets/styles/index.min.css">
-    <link rel="stylesheet" href="/CECePortal/assets/styles/glob.min.css">
-    <link rel="stylesheet" href="/CECePortal/assets/styles/media.min.css">
-    <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/CECePortal/public/Index/index.min.css">
+    <link rel="stylesheet" href="/CECePortal/public/Global/glob.min.css">
+    <link rel="stylesheet" href="/CECePortal/public/Index/index_media.min.css">
     <noscript>
         <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
     </noscript>
@@ -114,9 +113,8 @@
         <span id="notification-message" class="notification-message"></span>
     </div>
     <div id="notification" class="notification unselectable"></div>
-    <script type="text/javascript" src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="/CECePortal/assets/scripts/main.js"></script>
-    <script type="text/javascript" src="/CECePortal/assets/scripts/glob.js"></script>
+    <script type="text/javascript" src="/CECePortal/public/Index/index.min.js"></script>
+    <script type="text/javascript" src="/CECePortal/public/Global/glob.js"></script>
 </body>
 
 </html>
