--- a/CECePortal/error-page.html
+++ b/CECePortal/error-page.html
@@ -7,8 +7,7 @@
     <title>JavaScript Required - Catholic Education Board</title>
     <link rel="icon" href="/CECePortal/assets/icons/favicon.svg" type="image/png">
     <link rel="icon" href="/CECePortal/assets/icons/favicon.png" type="image/png">
-    <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
-    <link href="/CECePortal/assets/styles/error.min.css" rel="stylesheet">
+        <link href="/CECePortal/public/Errors/error.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -18,14 +17,14 @@
             <h1>JavaScript Required</h1>
             <p>This application requires JavaScript to be enabled in your browser.</p>
             <p>Please enable JavaScript and refresh the page.</p>
-            <a href="index.html" class="error-home-link">Return to Home</a>
+            <a href="/CECePortal/index.html" class="error-home-link">Return to Home</a>
         </div>
     </div>
     <div id="notification-bar" class="notification-bar">
         <span id="notification-message" class="notification-message"></span>
     </div>
     <div id="notification" class="notification unselectable"></div>
-    <script src="/CECePortal/assets/scripts/glob.js"></script>
+    <script src="/CECePortal/public/Global/glob.js"></script>
 </body>
 
 </html>
