--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -7,10 +7,10 @@
     <title>Login - Catholic Education Board</title>
     <link rel="icon" href="/CECePortal/assets/icons/favicon.svg" type="image/png">
     <link rel="icon" href="/CECePortal/assets/icons/favicon.png" type="image/png">
-    <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
-    <link href="/CECePortal/assets/styles/login.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/CECePortal/assets/styles/glob.min.css">
-    <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
+    <link href="/CECePortal/public/Logins/login.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/CECePortal/public/Global/glob.min.css">
+        <link href="/CECePortal/public/Global/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/CECePortal/public/Global/bootstrap-icons.min.css">
     <noscript>
         <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
     </noscript>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="login-right unselectable">
-            <div class="header-icons unselectable"><a href="index.html" class="house-icon unselectable"><svg
+            <div class="header-icons unselectable"><a href="/CECePortal/index.html" class="house-icon unselectable"><svg
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-house" viewBox="0 0 16 16">
                         <path
@@ -54,7 +54,7 @@
                     <button type="submit" id="submit" class="btn">Login</button>
                 </div>
                 <div class="form-links unselectable">
-                    <a href="verify-centre.html">Register School</a><span>|</span><a href="password-reset.html">Reset Password</a>
+                    <a href="/CECePortal/verify-centre.html">Register School</a><span>|</span><a href="/CECePortal/password-reset.html">Reset Password</a>
                 </div>
             </form>
         </div>
@@ -63,9 +63,9 @@
         </div>
         <div id="notification" class="notification unselectable"></div>
     </div>
-    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
-    <script src="/CECePortal/assets/scripts/login.js"></script>
-    <script src="/CECePortal/assets/scripts/glob.js"></script>
+    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js">;</script>
+        <script src="/CECePortal/public/Logins/login.js"></script>
+    <script type="text/javascript" src="/CECePortal/public/Global/glob.js"></script>
 </body>
 
 </html>
