--- a/CECePortal/contact-us.html
+++ b/CECePortal/contact-us.html
@@ -7,6 +7,8 @@
     <title>Contact Us - Catholic Education Board</title>
     <link rel="icon" href="/CECePortal/assets/icons/favicon.svg" type="image/png">
     <link rel="icon" href="/CECePortal/assets/icons/favicon.png" type="image/png">
+        <link href="/CECePortal/public/Global/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/CECePortal/public/Global/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/CECePortal/public/ContactUs/contactus.min.css">
     <link rel="stylesheet" href="/CECePortal/public/Global/glob.min.css">
     <noscript>
