--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -32,7 +32,7 @@
   <body>
     <div id="loading" style="display:none;">
       <div class="loader"></div>
-      <p>Loading...</p>
+      <p> Loading... Please Wait.</p>
   </div>
   
 
