--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -28,7 +28,7 @@
 
 
     <title>Catholic Education Commission - ePortal</title>
-    <link rel="icon" href="/CECePortal/assets/icons/favicon.svg" type="image/png">
+    <link rel="icon" href="/CECePortal/assets/icons/favicon.ico" type="image/ico">
     <link rel="icon" href="/CECePortal/assets/icons/favicon.png" type="image/png">
     <link rel="stylesheet" href="/CECePortal/public/Index/index.min.css">
     <link rel="stylesheet" href="/CECePortal/public/Global/glob.min.css">
@@ -38,9 +38,6 @@
     </noscript>
     
 </head>
-
-
-
 <body>
     <header>
         <nav class="container unselectable">
