--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -63,7 +63,7 @@
         </div>
         <div id="notification" class="notification unselectable"></div>
     </div>
-    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js">;</script>
+    <script src="/CECePortal/public/Global/bootstrap.bundle.min.js"></script>
         <script src="/CECePortal/public/Logins/login.js"></script>
     <script type="text/javascript" src="/CECePortal/public/Global/glob.js"></script>
 </body>
