--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -105,13 +105,13 @@
             <div class="form-group">
               <label for="state">State</label>
               <select id="state" name="state">
-                <option value="">Select State</option>
+                <option value="" disabled selected>Select State</option>
               </select>
             </div>
             <div class="form-group">
               <label for="lga">Local Government Area</label>
               <select id="lga" name="lga">
-                <option value="">Select an LGA</option>
+                <option value="" disabled selected>Select an LGA</option>
               </select>
             </div>
           </div>
@@ -120,7 +120,7 @@
             <div class="form-group">
               <label for="schoolType">School Type</label>
               <select id="schoolType" name="schoolType">
-                <option value="">Select School Type</option>
+                <option value="" disabled selected>Select School Type</option>
               </select>
             </div>
             <div class="form-group">
